avances noche domingo

--- a/Jupyter_notebooks/ Data-cleaning-Global-Shark-Attacks.ipynb
+++ b/Jupyter_notebooks/ Data-cleaning-Global-Shark-Attacks.ipynb
@@ -2323,6 +2323,47 @@
     "valores_nulos = df['original_order'].isnull().sum() # 0 valores nulos\n",
     "valores_nulos"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "71b80f99",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                          col\n",
+      "0                                        male\n",
+      "1                                   Zulu male\n",
+      "2  Sea Hawk, occupants: R. Roberts & 4 others\n",
+      "3     Fijian cook of vessel Andi Tui Lomaloma\n",
+      "4                   Bill Dyer & Cliff Burgess\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Creamos un DataFrame de ejemplo\n",
+    "df = pd.DataFrame({'col': ['male x 3', 'young Zulu male', 'boat Sea Hawk, occupants: R. Roberts & 4 others',\n",
+    "                           'male, Fijian cook of vessel Andi Tui Lomaloma', \"12' ski, occupants: Bill Dyer & Cliff Burgess\"]})\n",
+    "\n",
+    "# Extraemos la cadena después de la primera letra mayúscula o reemplazamos 'male' si contiene la palabra 'male'\n",
+    "df['col'] = df['col'].str.extract('([A-Z].*)', expand=False).fillna('male').str.strip()\n",
+    "\n",
+    "# Imprimimos el DataFrame actualizado\n",
+    "print(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "75dcb318",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
